Fixes on spacing and responsiveness

--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -36,7 +36,7 @@
 
 .about__data {
     padding-top: 2.5rem;
-    padding-right: 2.5rem;
+
 }
 
 .about__wholebox {
