--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -1,4 +1,4 @@
-aside {
+.aside {
     position: fixed;
     left: 0;
     top: 0;
@@ -59,23 +59,23 @@ aside {
 
 .nav__toggle {
     position: fixed;
-    top: 1rem;
-    left: 1.875rem;
+    top: 2.10rem;
+    left: 1rem;
     cursor: pointer;
     height: 40px;
     width: 40px;
     background-color: var(--body-color);
-    border: 2px solid var(--border-color);
+    border: 1px solid var(--border-color);
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 1;
-    transition: 0.3s;
+    transition: 0.3s ease;
     font-size: 1rem;
 }
 
 [data-theme="dark"] .nav__toggle {
-    border: 1px solid var(--title-color);
+    border: 1px solid var(--border-color);
 
 }
 
@@ -84,16 +84,13 @@ aside {
 }
 
 @media screen and (max-width: 1024px) {
-    aside {
+    .aside {
         left: -110px;
     }
 
-    .nav__toggle {
-        display: flex;
-    }
-
     .nav__toggle-open {
-        left: 140px;
+        left: 125px;
+        
     }
 
     .show-menu {
